--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main id="produto" class="container-produtos">
 
         <header class="topo-produto">
-            <h3 class="titulo-topo">Os mais vendidos pra você levar agora:</h3>
+            <h3>Os mais vendidos pra você levar agora:</h3>
         </header>
 
         <section class="produto">
@@ -60,7 +60,7 @@
                     <a href="#"><i class="far fa-heart"></i></div></a>
                 <a href=""><img src="assets/img/img-produtos/Esmalte_Avon_Pro_Color_10ml_V_743.png"         alt="Esmalte_Avon_Pro_Color_10ml__V_743"></a>
                 <div class="descricao-produto">
-                    <h2>Esmalte Pro Color 10ml</h2>
+                    <h2>Esmalte Pro 10ml</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 25,90</p>
@@ -73,7 +73,7 @@
                 <div class="list-desejo">
                     <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Base_Lquida_Avon_Power_Stay__4_761.png"          alt="Base_Lquida_Avon_Power_Stay__4_761"></a>
                 <div class="descricao-produto">
-                    <h2>Base liquida Avon Power Stay</h2>
+                    <h2>Base liq Power Stay</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 52,90</p>
@@ -87,7 +87,7 @@
                 <div class="list-desejo">
                     <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Batom_Avon_Mattelizado_36g_Ro_525.png"        alt="Batom_Avon_Mattelizado_36g__Ro_525"></a>
                 <div class="descricao-produto">
-                    <h2>Batom Mattelizado 36g</h2>
+                    <h2>Batom Mattelizado</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 49,90</p>
@@ -100,7 +100,7 @@
                 <div class="list-desejo">
                     <a href="#"><i class="far fa-heart"></i></div></a><a href=""><img src="assets/img/img-produtos/Deo_Colnia_Surreal_Magic_75ml_485.png"              alt="Deo_Colnia_Surreal_Magic__75ml_485"></a>
                 <div class="descricao-produto">
-                    <h2>Deo Col Surreal Magic 75ml</h2>
+                    <h2>Deo Col Surreal 75ml</h2>
                 </div>
                 <div class="valor-produto">
                     <p>R$ 109,90</p>
@@ -125,7 +125,7 @@
             </div>
 
         </section>
-        </main>
+ </main>
 
         <section class="selecao-produtos">
             <header class="topo-produto">
@@ -224,7 +224,7 @@
                 </div>
                 </div>
         </section>    
-        </section>
+        
 
         <section class="radape-cadastro" id="cadastro">
             <div class="info-cadastro">
